Alterado para usar a imagem rc2 como base
- Dockerfile alterado para usar a imagem rc2 como base
- Atualizado o dump do banco
- Arquivo config.php agora é gerado pelo script entrypoint
- Atualizado docker-compose para a nova configuração

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,9 @@ services:
       - moodledata:/var/moodledata
       - dbdata:/var/lib/postgresql/9.5/main
       - logs:/var/log
+    environment:
+      - DBPASS=SenhaDoBancoPostgreSQL
+
 volumes:
   moodledata:
   dbdata:
