Separado yml do docker-compose para prod e dev
- Arquivo docker-compose.yml é para ser usado em produção
- Arquivo docker-compose.dev.yml é para ser usado em desenvolvimento

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,13 @@
 version: '3'
 services:
   c10:
-    image: capes/c10:rc3
-    build: ./build
+    image: capes/c10
+    restart : always
     ports:
       - 80:80
     volumes:
       - moodledata:/var/moodledata
-      - dbdata:/var/lib/postgresql/9.5/main
+      - dbdata:/var/lib/postgresql/10/main
       - logs:/var/log
     environment:
       - DBPASS=SenhaDoBancoPostgreSQL
